# OrchestratoRRR

./: .gitignore  README.md  debug_utf16.txt  pyproject.toml
config/: orchestrator.example.toml
docs/: architecture.md  phase-plan.md
docs/acceptance/: adapter-real-smoke-preparation.md  phase-0.md  phase-1a.md  phase-1b.md  phase-2a.md  phase-2b.md  phase-2d.md  phase-3.md  phase-4.md  phase-5.md
docs/decisions/: ADR-0001-python-orchestrator.md  ADR-0002-windows-process-containment.md
docs/investigations/: phase-2c-mumu-manager-discovery.md  phase-2d-mumu-cli-probe.md
docs/manual/: adapter-real-smoke-gate.md  phase-2b-mumu-smoke.md  phase-3-starrail-smoke.md  phase-4-maa-smoke.md  phase-5-aalc-smoke.md
schemas/: run-report-v1.schema.json
schemas/golden/: run-report-v1.golden.json
src/autogame_orchestrator/: __init__.py  __main__.py  cli.py  config_loader.py  config_model.py  log_writer.py  models.py  planning.py  reporter.py
src/autogame_orchestrator/diagnostics/: __init__.py  adapter_smoke.py  mumu_cli_probe.py
src/autogame_orchestrator/probes/: __init__.py  adb_client.py  adb_parser.py  models.py  mumu_readiness.py  tcp.py
src/autogame_orchestrator/process/: __init__.py  cancellation.py  deadline.py  (+8 more)
tests/: conftest.py
tests/cli/: test_cli.py
tests/config/: test_aalc_config.py  test_maa_config.py  test_starrail_config.py
tests/contract/: test_run_report_schema.py
tests/diagnostics/: test_adapter_smoke.py  test_mumu_cli_probe.py
tests/fakes/: fake_aalc.py  fake_adb.py  fake_child.py  fake_maa.py  fake_mumu_cli.py  fake_mumu_manager.py  fake_stage.py  fake_starrail.py
tests/fixtures/: invalid-toml.toml  invalid-values-config.toml  missing-fields-config.toml  valid-config.toml
tests/probes/: test_adb_client.py  test_adb_parser.py  test_mumu_readiness.py  test_tcp_probe.py
tests/process/: test_cancellation.py  test_deadline.py  test_models.py  test_supervisor.py  test_win32_handles.py  test_win32_job.py  test_win32_launcher.py
tests/runtime/: test_aalc_runtime.py  test_maa_runtime.py  test_mumu_runtime.py  test_starrail_runtime.py
tests/unit/: test_config_loader.py  test_config_model.py  test_log_writer.py  test_models.py  test_reporter.py
(+10 files in other folders)
