[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OrchestratoRRR"
version = "0.1.0"
description = "A bounded Windows process orchestrator for MuMu, StarRailCopilot, MAA, and AALC."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Autogame" },
]
keywords = ["orchestrator", "automation", "gaming"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "check-jsonschema>=0.28",
]

[project.scripts]
autogame-orch = "autogame_orchestrator.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "SIM105",  # contextlib.suppress is less readable for cleanup paths
    "SIM117",  # nested with statements are intentional
]

[tool.ruff.lint.isort]
known-first-party = ["autogame_orchestrator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = false
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "jsonschema"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.validators"
ignore_missing_imports = true
